--- a/src/style.css
+++ b/src/style.css
@@ -24,14 +24,15 @@ html
 
 .placeholder
 {
-  background-color: rgba(253, 27, 27, 0);
   z-index: 1;
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 input
 {
-  background-color: #3E4143;
   z-index: 0;
+  background-color: #3E4143;
   color: #FFFFFF;
   border: 0px;
   font-family: Oxygen;
