--- a/styles/searchBar.css
+++ b/styles/searchBar.css
@@ -1,7 +1,6 @@
 .searchBar
 {
-  z-index: -1;
-  background-color: green;
+  background-color: rgb(62, 65, 67);
   position: relative;
   width: 100%;
   height: 10vh;
@@ -9,6 +8,7 @@
 
 .searchBarInput, .searchBarPlaceholder
 {
+  z-index: 2;
   background-color: rgba(0, 0, 0, 0);
   color: rgb(255, 255, 255);
   font-family: Oxygen;
@@ -30,7 +30,7 @@
 
 .searchBarPlaceholder
 {
-  z-index: -1;
+  z-index: 1;
   background-color: rgb(62, 65, 67);
   color: rgba(255, 255, 255, 0.5);
 }
