theming semi-support and moving search bar and page blocks to their own little components

--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -28,7 +28,7 @@
   outline: none;
 }
 
-.icon, .action
+.buttonIcon, .buttonAction
 {
   background-color: black;
   position: absolute;
@@ -38,7 +38,7 @@
   height: inherit;
 }
 
-.action
+.buttonAction
 {
   left: calc(95% - 10px);
 }
