--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -11,8 +11,7 @@
   top: 2px;
 
   display: grid;
-  grid-template-columns: 100vw;
-  grid-auto-rows: 10vh;
+  grid-auto-rows: max-content;
   grid-row-gap: 2px;
 }
 
@@ -20,6 +19,7 @@
 {
   background-color: blue;
   position: relative;
+  left: 0px;
   width: inherit;
   height: 10vh;
   padding: 0px;
