--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -36,8 +36,8 @@
   position: relative;
   left: 0px;
   width: inherit;
-  height: 10vh;
-  /* height: 90px; */
+  /* height: 10vh; */
+  height: 90px;
   padding: 0px;
   border: 0px;
  }
