so this works now for some god fucking reason I don't know (style.bottom)

--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -18,15 +18,15 @@
 
 .topHideout, .botHideout
 {
-  order: -1;
+  z-index: 1;
   background-color: black;
+  position: absolute;
   width: inherit;
-  height: 10vh;
+  height: 10px;
 }
 
 .botHideout
 {
-  order: 1;
   background-color: white;
 }
 
