--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -16,7 +16,7 @@
   grid-row-gap: 2px;
 }
 
-.topHideout, .botHideout
+.topInfinity, .botInfinity
 {
   z-index: 1;
   background-color: black;
@@ -25,7 +25,7 @@
   height: 10px;
 }
 
-.botHideout
+.botInfinity
 {
   background-color: white;
 }
