--- a/theme/dark/style/searchBar.css
+++ b/theme/dark/style/searchBar.css
@@ -1,6 +1,6 @@
 #searchBar
 {
-  background-color: rgb(62, 65, 67);
+  background-color: #3e4143;
   position: relative;
   width: 100vw;
   height: 10vh;
@@ -8,16 +8,15 @@
 
 #searchBarPlaceholder, #searchBarInput
 {
-  z-index: 2;
   background-color: rgba(0, 0, 0, 0);
-  color: rgb(255, 255, 255);
+  color: #ffffff;
   position: absolute;
   left: 10px;
   top: 0;
   width: calc(100vw - 20px);
   height: inherit;
   font-family: Oxygen;
-  font-size: 150%;
+  font-size: 135%;
   font-weight: 200;
   padding: 0px;
   border: 0px;
@@ -25,9 +24,9 @@
 
 #searchBarPlaceholder
 {
-  z-index: 1;
-  background-color: rgb(62, 65, 67);
+  background-color: #3e4143;
   color: rgba(255, 255, 255, 0.5);
+  pointer-events: none;
 }
 
 #searchBarInput:focus
