--- a/theme/dark/style/page.css
+++ b/theme/dark/style/page.css
@@ -34,6 +34,9 @@
 .buttonIcon, .buttonAction
 {
   background-color: rgba(0, 0, 0, 0);
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center;
   pointer-events: none;
   position: absolute;
   left: 10px;
@@ -45,6 +48,17 @@
 .buttonAction
 {
   left: calc(95% - 10px);
+}
+
+.image
+{
+  background-color: wheat;
+
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 24px;
+  height: 30px;
 }
 
 .buttonTitle, .buttonDescription
