--- a/src/themes/dark/styles/page.css
+++ b/src/themes/dark/styles/page.css
@@ -34,8 +34,8 @@
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
-  fill: red;
-  stroke: red;
+  fill: white;
+  stroke: white;
   pointer-events: none;
   position: absolute;
   left: 10px;
@@ -43,7 +43,6 @@
   width: 3.8vw;
   height: inherit;
   padding: 0px;
-  /* border: 1px red solid; */
 }
 
 .buttonActionIcon
@@ -62,7 +61,7 @@
   height: 50%;
   width: calc(90% - 40px);
   font-family: Oxygen;
-  font-size: 110%;
+  font-size: calc(50% + 2vh);
   font-weight: 200;
   margin-top: 0.8vh;
   padding: 0px;
