--- a/src/themes/default/fonts.css
+++ b/src/themes/default/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: Oxygen;
-  src: url(../fonts/Oxygen-Light.ttf);
+  src: url(./fonts/Oxygen-Light.ttf);
   font-weight: 100;
 }
 
 @font-face {
   font-family: Oxygen;
-  src: url(../fonts/Oxygen-Regular.ttf);
+  src: url(./fonts/Oxygen-Regular.ttf);
   font-weight: 200;
 }
 
 @font-face {
   font-family: Oxygen;
-  src: url(../fonts/Oxygen-Bold.ttf);
+  src: url(./fonts/Oxygen-Bold.ttf);
   font-weight: 300;
 }
