--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -1,21 +1,4 @@
-.button
-{
-  background-color: #292929;
-  position: relative;
-  left: 0px;
-  width: inherit;
-  height: 12vh;
-  padding: 0px;
-  border: 0px;
-}
-
-.button:focus, .button:hover
-{
-  background-color: #4F4F4F;
-  outline: none;
-}
-
-.buttonIcon, .buttonActionIcon
+.buttonExtensionIcon, .buttonActionIcon
 {
   background-color: transparent;
   background-size: 100% auto;
@@ -30,7 +13,7 @@
   width: 3.8vw;
   height: inherit;
   padding: 0px;
-  border: 0px red solid;
+  border: 0px;
 }
 
 .buttonActionIcon
@@ -40,20 +23,24 @@
 
 .buttonTitle, .buttonDescription
 {
+  display: flex;
+  align-items: center;
   background-color: transparent;
   color: #ffffff;
   pointer-events: none;
+  user-select: none;
+  cursor: default;
   position: absolute;
-  left: 10px;
+  left: 12px;
   top: 0px;
   height: 50%;
-  width: calc(100vw - (7.6vw + 40px));
+  width: calc(100vw - (7.6vw + 42px));
   font-family: Oxygen;
   font-size: calc(50% + 2vh);
   font-weight: 200;
   margin-top: 0.8vh;
   padding: 0px;
-  border: 0px red solid;
+  border: 0px;
 }
 
 .buttonDescription
