--- a/src/extensions/default-dark/styles/page.css
+++ b/src/extensions/default-dark/styles/page.css
@@ -13,3 +13,20 @@ body
   display: grid;
   grid-auto-rows: max-content;
 }
+
+.block
+{
+  background-color: #292929;
+  position: relative;
+  left: 0px;
+  width: inherit;
+  height: 12vh;
+  padding: 0px;
+  border: 0px;
+}
+
+.block:focus, .block:hover
+{
+  background-color: #4F4F4F;
+  outline: none;
+}
