--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -10,7 +10,7 @@
   position: absolute;
   left: calc(100vw - (7.6vw + 20px));
   top: 0px;
-  width: 3.8vw;
+  width: 50px;
   height: inherit;
   padding: 0px;
   border: 0px;
@@ -36,11 +36,11 @@
   height: 50%;
   width: calc(100vw - (7.6vw + 42px));
   font-family: Oxygen;
-  font-size: calc(50% + 2vh);
+  font-size: calc(10px + 0.5vw + 1.3vh);
   font-weight: 200;
   margin-top: 0.8vh;
   padding: 0px;
-  border: 0px;
+  /* border: solid red 2px; */
 }
 
 .buttonDescription
