the theme sizes are now (16px + 2vw + 0.5vh) - 5% better

--- a/src/extensions/default-dark/styles/body.css
+++ b/src/extensions/default-dark/styles/body.css
@@ -6,6 +6,7 @@ body
 .block
 {
   background-color: #292929;
+  cursor: pointer;
   position: relative;
   width: 100%;
   height: calc(60px + 5vh);
