--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -1,46 +1,50 @@
-.buttonExtensionIcon, .buttonActionIcon
+.button
 {
-  background-color: transparent;
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  fill: white;
-  stroke: white;
-  pointer-events: none;
-  position: absolute;
-  left: calc(100vw - (((16px + 2vw + 0.5vh) * 2) + 20px));
-  top: 0px;
-  width: calc(16px + 2vw + 0.5vh);
-  height: inherit;
-}
-
-.buttonActionIcon
-{
-  left: calc(100vw - ((16px + 2vw + 0.5vh) + 10px));
+  display: flex;
+  flex-wrap: wrap;
+  width: 100vw;
+  /* grid-template-areas:
+  'title extIcon actionIcon'
+  'desc desc desc'; */
+  /* grid-column-gap: 5px; */
 }
 
 .buttonTitle, .buttonDescription
 {
-  display: flex;
-  align-items: flex-end;
+  /* grid-area: title; */
   background-color: transparent;
-  color: #ffffff;
-  pointer-events: none;
+  color: #FFFFFF;
   user-select: none;
-  cursor: default;
-  position: absolute;
-  left: 20px;
-  top: 0px;
-  height: 50%;
-  width: calc(100vw - (((16px + 2vw + 0.5vh) * 2) + 50px));
+  white-space: nowrap;
+  overflow: hidden;
+  width: calc(100vw - ((16px + 2vw + 0.5vh) * 2) - 12px);
   font-family: Oxygen;
   font-size: calc(10px + 0.5vw + 1.3vh);
-  font-weight: 200;
+  font-weight: normal;
+  border: #542C74 solid 2px;
 }
 
 .buttonDescription
 {
-  align-items: flex-start;
+  /* grid-area: desc; */
   color: #878787;
-  top: 50%;
+}
+
+.buttonExtensionIcon, .buttonActionIcon
+{
+  /* grid-area: extIcon; */
+  background-color: transparent;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  fill: white;
+  stroke: white;
+  width: calc(16px + 2vw + 0.5vh);
+  height: 100%;
+  border: #542C74 solid 2px;
+}
+
+.buttonActionIcon
+{
+  /* grid-area: actionIcon; */
 }
