--- a/src/extensions/default-dark/styles/fonts.css
+++ b/src/extensions/default-dark/styles/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Light.ttf);
-  font-weight: 100;
+  font-weight: lighter;
 }
 
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Regular.ttf);
-  font-weight: 200;
+  font-weight: normal;
 }
 
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Bold.ttf);
-  font-weight: 300;
+  font-weight: bold;
 }
