--- a/src/extensions/default-dark/styles/searchBar.css
+++ b/src/extensions/default-dark/styles/searchBar.css
@@ -1,15 +1,11 @@
 .searchBar
 {
-  outline: none;
   background-color: #4F4F4F;
   color: #FFFFFF;
-  width: 100%;
-  height: calc(35px + 4.5vh + 0.5vw);
+  height: calc(30px + 3vh + 0.5vw);
   font-family: Oxygen;
-  font-size: calc(15px + 1vh + 0.5vw);
-  font-weight: 200;
-  padding: 0px 10px;
-  border: 0px;
+  font-size: calc(15px + 1.5vh + 0.5vw);
+  font-weight: normal;
 }
 
 .searchBar::placeholder
