--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -1,50 +1,44 @@
 .button
 {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100vw;
-  /* grid-template-areas:
-  'title extIcon actionIcon'
-  'desc desc desc'; */
-  /* grid-column-gap: 5px; */
+  display: grid;
+  grid-column-gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(10px, 100vw));
 }
 
 .buttonTitle, .buttonDescription
 {
-  /* grid-area: title; */
+  grid-row: 1;
   background-color: transparent;
   color: #FFFFFF;
-  user-select: none;
-  white-space: nowrap;
   overflow: hidden;
-  width: calc(100vw - ((16px + 2vw + 0.5vh) * 2) - 12px);
-  font-family: Oxygen;
-  font-size: calc(10px + 0.5vw + 1.3vh);
-  font-weight: normal;
-  border: #542C74 solid 2px;
 }
 
 .buttonDescription
 {
-  /* grid-area: desc; */
+  grid-row: 2;
   color: #878787;
+  white-space: pre-line;
+  writing-mode: horizontal-tb;
+  max-block-size: 35vh;
 }
 
 .buttonExtensionIcon, .buttonActionIcon
 {
-  /* grid-area: extIcon; */
+  grid-row: 1 / 3;
+  grid-column: 2;
+  align-self: center;
   background-color: transparent;
-  background-size: 100% 100%;
+  background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: center;
   fill: white;
   stroke: white;
-  width: calc(16px + 2vw + 0.5vh);
-  height: 100%;
-  border: #542C74 solid 2px;
+  width: calc(16px + 1.5vw + 0.5vh);
+  height: auto;
 }
 
 .buttonActionIcon
 {
-  /* grid-area: actionIcon; */
+  grid-row: 1 / 3;
+  grid-column: 3;
 }
