--- a/src/extensions/default-dark/styles/fonts.css
+++ b/src/extensions/default-dark/styles/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Light.ttf);
-  font-weight: lighter;
+  font-weight: 100;
 }
 
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Regular.ttf);
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @font-face {
   font-family: Oxygen;
   src: url(../fonts/Oxygen-Bold.ttf);
-  font-weight: bold;
+  font-weight: 700;
 }
