--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-column-gap: 5px;
   grid-template-columns: repeat(auto-fit, minmax(10px, 100vw));
+  cursor: pointer;
 }
 
 .buttonTitle, .buttonDescription
