--- a/src/extensions/default-dark/styles/button.css
+++ b/src/extensions/default-dark/styles/button.css
@@ -1,32 +1,38 @@
 .button
 {
-  display: grid;
-  grid-column-gap: 5px;
-  grid-template-columns: repeat(auto-fit, minmax(10px, 100vw));
+  display: flex;
+  flex-flow: row wrap;
   cursor: pointer;
+}
+
+.button *
+{
+  margin: 5px 10px 0px 10px;
 }
 
 .buttonTitle, .buttonDescription
 {
-  grid-row: 1;
+  flex-grow: 8;
   background-color: transparent;
   color: #FFFFFF;
   overflow: hidden;
+  box-sizing: border-box;
+  border: #FFFFFF dashed 2px;
+  margin: 0;
 }
 
 .buttonDescription
 {
-  grid-row: 2;
+  flex-basis: 100%;
   color: #878787;
   white-space: pre-line;
   writing-mode: horizontal-tb;
   max-block-size: 35vh;
+  margin: 5px 10px 0px 10px;
 }
 
 .buttonExtensionIcon, .buttonActionIcon
 {
-  grid-row: 1 / 3;
-  grid-column: 2;
   align-self: center;
   background-color: transparent;
   background-size: 100% auto;
@@ -36,10 +42,21 @@
   stroke: white;
   width: calc(16px + 1.5vw + 0.5vh);
   height: auto;
+  margin: 0px 5px 0px 0px;
+  box-sizing: border-box;
+  border: #FFFFFF dashed 2px;
 }
 
 .buttonActionIcon
 {
-  grid-row: 1 / 3;
-  grid-column: 3;
+  margin: 0px 0px 0px 5px;
+}
+
+.buttonExtended
+{
+  background-color: transparent;
+  color: #FFFFFF;
+  overflow: hidden;
+  box-sizing: border-box;
+  border: #FFFFFF dashed 2px;
 }
