a lot of changes to how block works

--- a/src/extensions/default-dark/styles/searchBar.css
+++ b/src/extensions/default-dark/styles/searchBar.css
@@ -1,13 +1,19 @@
 .searchBar
 {
+  outline: none;
+  overflow: hidden;
   background-color: #4F4F4F;
   color: #FFFFFF;
   width: calc(100vw - 20px);
   height: calc(30px + 3vh + 0.5vw);
+  font-family: Oxygen;
   font-size: calc(15px + 1.5vh + 0.5vw);
-  text-transform: none;
-  padding-left: 10px;
-  padding-right: 10px;
+  font-weight: 400;
+  user-select: none;
+  white-space: nowrap;
+  border: 0px;
+  padding: 10px 10px 10px 10px;
+  margin: 0px;
 }
 
 .searchBar::placeholder
