--- a/src/extensions/default-dark/styles/block.css
+++ b/src/extensions/default-dark/styles/block.css
@@ -32,19 +32,6 @@
   cursor: default;
 }
 
-.blockChild
-{
-  background-color: transparent;
-  margin: 5px 0px 0px 0px;
-  padding: 10px 5px;
-}
-
-.blockChild:hover
-{
-  outline-offset: -1px;
-  outline: #FFFFFF solid 1px;
-}
-
 .blockGrid
 {
   flex-grow: 1;
@@ -52,7 +39,7 @@
   width: 0px;
 }
 
-.blockBreak
+.blockLineBreak
 {
   flex-basis: 100%;
   width: 0px;
@@ -67,7 +54,6 @@
   background-color: transparent;
   color: #FFFFFF;
   width: 0px;
-  border: #FFFFFF 2px solid;
 }
 
 .blockDescription
@@ -90,6 +76,34 @@
   stroke: white;
   width: calc(16px + 1vw + 0.5vh);
   height: auto;
-  /* margin: 0px 0px 0px 5px; */
-  border: #FFFFFF 2px solid;
+}
+
+/* Blocks inside other Blocks */
+
+.block > .block
+{
+  background-color: transparent;
+  padding: 10px 5px;
+}
+
+.block > .block:hover
+{
+  outline-offset: -1px;
+  outline: #FFFFFF solid 1px;
+}
+
+/* Spacing inside of a block */
+
+div ~ .block > .block
+{
+  margin: 5px 0px 0px 0px;
+}
+
+/* Spacing between the title and icons */
+
+.blockTitle + .blockExtensionIcon,
+.blockTitle + .blockActionIcon,
+.blockExtensionIcon + .blockActionIcon
+{
+  margin: 0px 0px 0px 5px;
 }
