--- a/src/extensions/default-dark/styles/block.css
+++ b/src/extensions/default-dark/styles/block.css
@@ -21,21 +21,6 @@
   margin: 0px;
 }
 
-.blockNormal
-{
-  font-size: calc(10px + 0.5vw + 1vh);
-}
-
-.blockSmall
-{
-  font-size: calc(8px + 0.5vw + 1vh);
-}
-
-.blockSmaller
-{
-  font-size: calc(8px + 0.5vw + 0.8vh);
-}
-
 .block:focus, .block:hover
 {
   background-color: #4F4F4F;
@@ -66,6 +51,51 @@
   color: #FFFFFF;
   width: auto;
   height: auto;
+}
+
+.blockLeft
+{
+  justify-content: flex-start;
+}
+
+.blockRight
+{
+  justify-content: flex-end;
+}
+
+.blockCenter
+{
+  justify-content: center;
+}
+
+.blockMedium
+{
+  font-size: calc(10px + 0.5vw + 1vh);
+}
+
+.blockSmall
+{
+  font-size: calc(8px + 0.5vw + 1vh);
+}
+
+.blockSmaller
+{
+  font-size: calc(8px + 0.5vw + 0.8vh);
+}
+
+.blockNormal
+{
+  font-weight: 400;
+}
+
+.blockLight
+{
+  font-weight: 100;
+}
+
+.blockBold
+{
+  font-weight: 700;
 }
 
 .blockDescription
